--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,149 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>Дима Ноэл</title>
 </head>
 <body>
+	<header>
+		<nav class="menu">
+			<div class="menuLogo">Дима Ноэл</div>
+			<ul>
+				<li class="menuPoint">Обо мне</li>
+				<li class="menuPoint">Услуги</li>
+				<li class="menuPoint">Кейсы</li>
+				<li class="menuPoint">Прайс</li>
+				<li class="menuPoint">Отзывы</li>
+				<li class="menuPoint">Контакты</li>
+			</ul>
+		</nav>
+	</header>
 
+	<div class="main">
+		<h1>Привет<br>Я Дима Ноэл</h1>
+		<h4>Фулл стек веб-разработчик</h4>
+		<input type="submit" name="mainAboutMe" value="Обо мне">
+		<input type="submit" name="mainMyWorks" value="Мои работы">
+	</div>
+
+	<div class="aboutMe">
+		<div class="titles">Обо мне</div>
+		<img src="#" alt="Тут должен быть портретик...">
+		<p>Hello world Hello world</p>
+		<input type="submit" name="aboutMeResume" value="Скачать резюме">
+	</div>
+
+	<div class="canDo">
+		<div class="titles">Что я умею</div>
+		<table>
+			<tr>
+				<th><img src="img\icons\notebook.png" alt="Notebook"></th>
+				<th><img src="img\icons\sign.png" alt="Sign"></th>
+				<th><img src="img\icons\rocket.png" alt="Rocket"></th>
+				<th><img src="img\icons\gramophone.png" alt="Gramophone"></th>
+			</tr>
+
+			<tr>
+				<td>Веб-дизайн</td>
+				<td>Разработка</td>
+				<td>CEO-Оптимизация</td>
+				<td>Маркетинг</td>
+			</tr>
+
+			<tr>
+				<td>Hello10</td>
+				<td>Hello world</td>
+				<td>Hello world</td>
+				<td>Hello world</td>
+			</tr>
+		</table>
+	</div>
+
+	<div class="cases">
+		<div class="titles">Кейсы</div>
+		<div class="case">
+			<div class="caseName">Hello world</div>
+			<img src="#" alt="Тут скрин кейса...">
+			<div class="caseDisc">
+				<div class="caseDiscClient">Client:</div>
+				<p>ООО "Крутая компания"</p>
+
+				<div class="caseDiscWebsite">Website:</div>
+				<p>http://www.somedomain.com</p>
+
+				<div class="caseDiscName">Название проекта</div>
+				<p>Hello world</p>
+			</div>
+		</div>
+	</div>
+
+	<div class="cost">
+		<div class="costPoint">Тип сайта</div>
+		<select name="siteType" id="list">
+			<option value="Opt1">Выберите пункт...</option>
+			<option value="Opt2">Hello world</option>
+		</select>
+
+		<div class="costPoint">Дизайн</div>
+		<select name="siteDesign" id="list">
+			<option value="Opt1">Выберите пункт...</option>
+			<option value="Opt2">Hello world</option>
+		</select>
+
+		<div class="costPoint">Адаптивность</div>
+		<select name="siteAdapt" id="list">
+			<option value="Opt1">Выберите пункт...</option>
+			<option value="Opt2">Hello world</option>
+		</select>
+
+		<span>Сроки 0</span>
+		<span>Стоимость 0</span>
+	</div>
+
+	<div class="statistic">
+		<div class="titles">Немного статистики</div>
+		<table>
+			<tr>
+				<th><img src="img\icons\smile.png" alt="Smile"></th>
+				<th><img src="img\icons\sign2.png" alt="Hours"></th>
+				<th><img src="img\icons\mark.png" alt="CheckMark"></th>
+				<th><img src="img\icons\cup.png" alt="Cup"></th>
+			</tr>
+
+			<tr>
+				<td>0</td>
+				<td>0</td>
+				<td>0</td>
+				<td>0</td>
+			</tr>
+
+			<tr>
+				<td>Счастливых клиентов</td>
+				<td>Часов работы</td>
+				<td>Проектов завершено</td>
+				<td>Наград получено</td>
+			</tr>
+		</table>
+	</div>
+
+	<div class="reviews">
+		<div class="titles">Отзывы</div>
+		<img src="#" alt="Тут должен быть портретик...">
+		<p>Hello world Hello world Hello world</p>
+		<p>Name, Work</p>
+	</div>
+
+	<div class="contacts">
+		<div class="titles">Мои контакты</div>
+		<p>Hello world Hello world</p>
+		<div class="cont">My Adress</div>
+		<div class="cont">My Email</div>
+		<div class="cont">My Phone</div>
+
+		<p>Оставьте мне сообщение</p>
+		<input type="text" name="Name" placeholder="Имя">
+		<input type="email" name="Email" placeholder="Email">
+		<textarea name="message" id="Message" cols="30" rows="10" placeholder="Cообщение"></textarea>
+		<input type="submit" value="Отправить">
+	</div>
 </body>
 </html>
