--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,12 @@
 	<title>Дима Ноэл</title>
 </head>
 <body>
+
+
 	<header>
+
 		<nav class="menu">
+
 			<div class="menuLogo">Дима Ноэл</div>
 			<ul>
 				<li class="menuPoint">Обо мне</li>
@@ -16,55 +20,73 @@
 				<li class="menuPoint">Отзывы</li>
 				<li class="menuPoint">Контакты</li>
 			</ul>
+
 		</nav>
+
 	</header>
 
+
 	<div class="main">
+
 		<h1>Привет<br>Я Дима Ноэл</h1>
 		<h4>Фулл стек веб-разработчик</h4>
 		<input type="submit" name="mainAboutMe" value="Обо мне">
 		<input type="submit" name="mainMyWorks" value="Мои работы">
+
 	</div>
 
+
 	<div class="aboutMe">
+
 		<div class="titles">Обо мне</div>
 		<img src="#" alt="Тут должен быть портретик...">
 		<p>Hello world Hello world</p>
 		<input type="submit" name="aboutMeResume" value="Скачать резюме">
+
 	</div>
+
 
 	<div class="canDo">
+
 		<div class="titles">Что я умею</div>
-		<table>
-			<tr>
-				<th><img src="img\icons\notebook.png" alt="Notebook"></th>
-				<th><img src="img\icons\sign.png" alt="Sign"></th>
-				<th><img src="img\icons\rocket.png" alt="Rocket"></th>
-				<th><img src="img\icons\gramophone.png" alt="Gramophone"></th>
-			</tr>
 
-			<tr>
-				<td>Веб-дизайн</td>
-				<td>Разработка</td>
-				<td>CEO-Оптимизация</td>
-				<td>Маркетинг</td>
-			</tr>
+		<div class="can_do_web_design">
+			<img src="img\icons\notebook.png" alt="Notebook">
+			<h4>Веб-дизайн</h4>
+			<p>Hello world</p>
+		</div>
 
-			<tr>
-				<td>Hello10</td>
-				<td>Hello world</td>
-				<td>Hello world</td>
-				<td>Hello world</td>
-			</tr>
-		</table>
+		<div class="can_do_development">
+			<img src="img\icons\sign.png" alt="Sign">
+			<h4>Разработка</h4>
+			<p>Hello world</p>
+		</div>
+
+		<div class="can_do_ceo_opt">
+			<img src="img\icons\rocket.png" alt="Rocket">
+			<h4>CEO-Оптимизация</h4>
+			<p>Hello world</p>
+		</div>
+
+		<div class="can_do_marketing">
+			<img src="img\icons\gramophone.png" alt="Gramophone">
+			<h4>Маркетинг</h4>
+			<p>Hello world</p>
+		</div>
+
 	</div>
 
+
 	<div class="cases">
+
 		<div class="titles">Кейсы</div>
+
 		<div class="case">
+
 			<div class="caseName">Hello world</div>
 			<img src="#" alt="Тут скрин кейса...">
 			<div class="caseDisc">
+
 				<div class="caseDiscClient">Client:</div>
 				<p>ООО "Крутая компания"</p>
 
@@ -73,24 +95,32 @@
 
 				<div class="caseDiscName">Название проекта</div>
 				<p>Hello world</p>
+
 			</div>
+
 		</div>
+
 	</div>
 
+
 	<div class="cost">
+
 		<div class="costPoint">Тип сайта</div>
+
 		<select name="siteType" id="list">
 			<option value="Opt1">Выберите пункт...</option>
 			<option value="Opt2">Hello world</option>
 		</select>
 
 		<div class="costPoint">Дизайн</div>
+
 		<select name="siteDesign" id="list">
 			<option value="Opt1">Выберите пункт...</option>
 			<option value="Opt2">Hello world</option>
 		</select>
 
 		<div class="costPoint">Адаптивность</div>
+
 		<select name="siteAdapt" id="list">
 			<option value="Opt1">Выберите пункт...</option>
 			<option value="Opt2">Hello world</option>
@@ -98,44 +128,57 @@
 
 		<span>Сроки 0</span>
 		<span>Стоимость 0</span>
+
 	</div>
+
 
 	<div class="statistic">
+
 		<div class="titles">Немного статистики</div>
-		<table>
-			<tr>
-				<th><img src="img\icons\smile.png" alt="Smile"></th>
-				<th><img src="img\icons\sign2.png" alt="Hours"></th>
-				<th><img src="img\icons\mark.png" alt="CheckMark"></th>
-				<th><img src="img\icons\cup.png" alt="Cup"></th>
-			</tr>
 
-			<tr>
-				<td>0</td>
-				<td>0</td>
-				<td>0</td>
-				<td>0</td>
-			</tr>
+		<div class="stat_clients">
+			<img src="img\icons\smile.png" alt="Smile">
+			<h4>0</h4>
+			<p>Счастливых клиентов</p>
+		</div>
 
-			<tr>
-				<td>Счастливых клиентов</td>
-				<td>Часов работы</td>
-				<td>Проектов завершено</td>
-				<td>Наград получено</td>
-			</tr>
-		</table>
+		<div class="stat_hours">
+			<img src="img\icons\sign2.png" alt="Hours">
+			<h4>0</h4>
+			<p>Часов работы</p>
+		</div>
+
+		<div class="stat_projects">
+			<img src="img\icons\mark.png" alt="CheckMark">
+			<h4>0</h4>
+			<p>Проектов завершено</p>
+		</div>
+
+		<div class="stat_rewards">
+			<img src="img\icons\cup.png" alt="Cup">
+			<h4>0</h4>
+			<p>Наград получено</p>
+		</div>
+
 	</div>
 
+
 	<div class="reviews">
+
 		<div class="titles">Отзывы</div>
+
 		<img src="#" alt="Тут должен быть портретик...">
 		<p>Hello world Hello world Hello world</p>
 		<p>Name, Work</p>
+
 	</div>
 
 	<div class="contacts">
+
 		<div class="titles">Мои контакты</div>
+
 		<p>Hello world Hello world</p>
+
 		<div class="cont">My Adress</div>
 		<div class="cont">My Email</div>
 		<div class="cont">My Phone</div>
@@ -145,6 +188,7 @@
 		<input type="email" name="Email" placeholder="Email">
 		<textarea name="message" id="Message" cols="30" rows="10" placeholder="Cообщение"></textarea>
 		<input type="submit" value="Отправить">
+
 	</div>
 </body>
 </html>
